// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ReactGoogleMaps /> if \`props.isShowingApproximateLocation\` is \`true\` should render the right structure 1`] = `
<GoogleMap
  center={
    Object {
      "lat": 1,
      "lng": 0,
    }
  }
  options={
    Object {
      "mapTypeControl": false,
      "streetViewControl": false,
      "styles": Array [
        Object {
          "featureType": "administrative.land_parcel",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "featureType": "administrative.neighborhood",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "labels.text",
          "featureType": "poi",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "labels",
          "featureType": "road",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "labels.text",
          "featureType": "water",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "stylers": Array [
            Object {
              "color": "#ebe3cd",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "stylers": Array [
            Object {
              "color": "#523735",
            },
          ],
        },
        Object {
          "elementType": "labels.text.stroke",
          "stylers": Array [
            Object {
              "color": "#f5f1e6",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "administrative",
          "stylers": Array [
            Object {
              "color": "#c9b2a6",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "administrative.land_parcel",
          "stylers": Array [
            Object {
              "color": "#dcd2be",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "administrative.land_parcel",
          "stylers": Array [
            Object {
              "color": "#ae9e90",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "landscape.natural",
          "stylers": Array [
            Object {
              "color": "#dfd2ae",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "poi",
          "stylers": Array [
            Object {
              "color": "#dfd2ae",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "poi",
          "stylers": Array [
            Object {
              "color": "#93817c",
            },
          ],
        },
        Object {
          "elementType": "geometry.fill",
          "featureType": "poi.park",
          "stylers": Array [
            Object {
              "color": "#a5b076",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "poi.park",
          "stylers": Array [
            Object {
              "color": "#447530",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "road",
          "stylers": Array [
            Object {
              "color": "#f5f1e6",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "road.arterial",
          "stylers": Array [
            Object {
              "color": "#fdfcf8",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "road.highway",
          "stylers": Array [
            Object {
              "color": "#f8c967",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "road.highway",
          "stylers": Array [
            Object {
              "color": "#e9bc62",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "road.highway.controlled_access",
          "stylers": Array [
            Object {
              "color": "#e98d58",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "road.highway.controlled_access",
          "stylers": Array [
            Object {
              "color": "#db8555",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "road.local",
          "stylers": Array [
            Object {
              "color": "#806b63",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "transit.line",
          "stylers": Array [
            Object {
              "color": "#dfd2ae",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "transit.line",
          "stylers": Array [
            Object {
              "color": "#8f7d77",
            },
          ],
        },
        Object {
          "elementType": "labels.text.stroke",
          "featureType": "transit.line",
          "stylers": Array [
            Object {
              "color": "#ebe3cd",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "transit.station",
          "stylers": Array [
            Object {
              "color": "#dfd2ae",
            },
          ],
        },
        Object {
          "elementType": "geometry.fill",
          "featureType": "water",
          "stylers": Array [
            Object {
              "color": "#b9d3c2",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "water",
          "stylers": Array [
            Object {
              "color": "#92998d",
            },
          ],
        },
      ],
      "zoom": 13,
    }
  }
>
  <Circle
    center={
      Object {
        "lat": 1,
        "lng": 0,
      }
    }
    options={
      Object {
        "clickable": false,
        "fillColor": "#ea4336",
        "fillOpacity": 0.5,
        "radius": 420,
        "strokeColor": "#ea4336",
        "strokeOpacity": 1,
      }
    }
  />
</GoogleMap>
`;

exports[`<ReactGoogleMaps /> if \`props.isShowingExactLocation\` is \`true\` should render the right structure 1`] = `
<GoogleMap
  center={
    Object {
      "lat": 1,
      "lng": 0,
    }
  }
  options={
    Object {
      "mapTypeControl": false,
      "streetViewControl": false,
      "styles": Array [
        Object {
          "featureType": "administrative.land_parcel",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "featureType": "administrative.neighborhood",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "labels.text",
          "featureType": "poi",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "labels",
          "featureType": "road",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "labels.text",
          "featureType": "water",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "stylers": Array [
            Object {
              "color": "#ebe3cd",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "stylers": Array [
            Object {
              "color": "#523735",
            },
          ],
        },
        Object {
          "elementType": "labels.text.stroke",
          "stylers": Array [
            Object {
              "color": "#f5f1e6",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "administrative",
          "stylers": Array [
            Object {
              "color": "#c9b2a6",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "administrative.land_parcel",
          "stylers": Array [
            Object {
              "color": "#dcd2be",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "administrative.land_parcel",
          "stylers": Array [
            Object {
              "color": "#ae9e90",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "landscape.natural",
          "stylers": Array [
            Object {
              "color": "#dfd2ae",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "poi",
          "stylers": Array [
            Object {
              "color": "#dfd2ae",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "poi",
          "stylers": Array [
            Object {
              "color": "#93817c",
            },
          ],
        },
        Object {
          "elementType": "geometry.fill",
          "featureType": "poi.park",
          "stylers": Array [
            Object {
              "color": "#a5b076",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "poi.park",
          "stylers": Array [
            Object {
              "color": "#447530",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "road",
          "stylers": Array [
            Object {
              "color": "#f5f1e6",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "road.arterial",
          "stylers": Array [
            Object {
              "color": "#fdfcf8",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "road.highway",
          "stylers": Array [
            Object {
              "color": "#f8c967",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "road.highway",
          "stylers": Array [
            Object {
              "color": "#e9bc62",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "road.highway.controlled_access",
          "stylers": Array [
            Object {
              "color": "#e98d58",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "road.highway.controlled_access",
          "stylers": Array [
            Object {
              "color": "#db8555",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "road.local",
          "stylers": Array [
            Object {
              "color": "#806b63",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "transit.line",
          "stylers": Array [
            Object {
              "color": "#dfd2ae",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "transit.line",
          "stylers": Array [
            Object {
              "color": "#8f7d77",
            },
          ],
        },
        Object {
          "elementType": "labels.text.stroke",
          "featureType": "transit.line",
          "stylers": Array [
            Object {
              "color": "#ebe3cd",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "transit.station",
          "stylers": Array [
            Object {
              "color": "#dfd2ae",
            },
          ],
        },
        Object {
          "elementType": "geometry.fill",
          "featureType": "water",
          "stylers": Array [
            Object {
              "color": "#b9d3c2",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "water",
          "stylers": Array [
            Object {
              "color": "#92998d",
            },
          ],
        },
      ],
      "zoom": 13,
    }
  }
>
  <Marker
    position={
      Object {
        "lat": 1,
        "lng": 0,
      }
    }
  />
</GoogleMap>
`;

exports[`<ReactGoogleMaps /> if \`props.markers\` is populated should render the right structure 1`] = `
<GoogleMap
  center={
    Object {
      "lat": 1,
      "lng": 0,
    }
  }
  options={
    Object {
      "mapTypeControl": false,
      "streetViewControl": false,
      "styles": Array [
        Object {
          "featureType": "administrative.land_parcel",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "featureType": "administrative.neighborhood",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "labels.text",
          "featureType": "poi",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "labels",
          "featureType": "road",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "labels.text",
          "featureType": "water",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "stylers": Array [
            Object {
              "color": "#ebe3cd",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "stylers": Array [
            Object {
              "color": "#523735",
            },
          ],
        },
        Object {
          "elementType": "labels.text.stroke",
          "stylers": Array [
            Object {
              "color": "#f5f1e6",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "administrative",
          "stylers": Array [
            Object {
              "color": "#c9b2a6",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "administrative.land_parcel",
          "stylers": Array [
            Object {
              "color": "#dcd2be",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "administrative.land_parcel",
          "stylers": Array [
            Object {
              "color": "#ae9e90",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "landscape.natural",
          "stylers": Array [
            Object {
              "color": "#dfd2ae",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "poi",
          "stylers": Array [
            Object {
              "color": "#dfd2ae",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "poi",
          "stylers": Array [
            Object {
              "color": "#93817c",
            },
          ],
        },
        Object {
          "elementType": "geometry.fill",
          "featureType": "poi.park",
          "stylers": Array [
            Object {
              "color": "#a5b076",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "poi.park",
          "stylers": Array [
            Object {
              "color": "#447530",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "road",
          "stylers": Array [
            Object {
              "color": "#f5f1e6",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "road.arterial",
          "stylers": Array [
            Object {
              "color": "#fdfcf8",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "road.highway",
          "stylers": Array [
            Object {
              "color": "#f8c967",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "road.highway",
          "stylers": Array [
            Object {
              "color": "#e9bc62",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "road.highway.controlled_access",
          "stylers": Array [
            Object {
              "color": "#e98d58",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "road.highway.controlled_access",
          "stylers": Array [
            Object {
              "color": "#db8555",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "road.local",
          "stylers": Array [
            Object {
              "color": "#806b63",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "transit.line",
          "stylers": Array [
            Object {
              "color": "#dfd2ae",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "transit.line",
          "stylers": Array [
            Object {
              "color": "#8f7d77",
            },
          ],
        },
        Object {
          "elementType": "labels.text.stroke",
          "featureType": "transit.line",
          "stylers": Array [
            Object {
              "color": "#ebe3cd",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "transit.station",
          "stylers": Array [
            Object {
              "color": "#dfd2ae",
            },
          ],
        },
        Object {
          "elementType": "geometry.fill",
          "featureType": "water",
          "stylers": Array [
            Object {
              "color": "#b9d3c2",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "water",
          "stylers": Array [
            Object {
              "color": "#92998d",
            },
          ],
        },
      ],
      "zoom": 13,
    }
  }
>
  <OverlayView
    key="0"
    mapPaneName="overlayMouseTarget"
    position={
      Object {
        "lat": 41.38,
        "lng": 2.15,
      }
    }
  >
    <div />
  </OverlayView>
  <OverlayView
    key="1"
    mapPaneName="overlayMouseTarget"
    position={
      Object {
        "lat": 41.375,
        "lng": 2.16,
      }
    }
  >
    <div />
  </OverlayView>
</GoogleMap>
`;

exports[`<ReactGoogleMaps /> should render the right structure 1`] = `
<GoogleMap
  center={
    Object {
      "lat": 1,
      "lng": 0,
    }
  }
  options={
    Object {
      "mapTypeControl": false,
      "streetViewControl": false,
      "styles": Array [
        Object {
          "featureType": "administrative.land_parcel",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "featureType": "administrative.neighborhood",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "labels.text",
          "featureType": "poi",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "labels",
          "featureType": "road",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "labels.text",
          "featureType": "water",
          "stylers": Array [
            Object {
              "visibility": "off",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "stylers": Array [
            Object {
              "color": "#ebe3cd",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "stylers": Array [
            Object {
              "color": "#523735",
            },
          ],
        },
        Object {
          "elementType": "labels.text.stroke",
          "stylers": Array [
            Object {
              "color": "#f5f1e6",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "administrative",
          "stylers": Array [
            Object {
              "color": "#c9b2a6",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "administrative.land_parcel",
          "stylers": Array [
            Object {
              "color": "#dcd2be",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "administrative.land_parcel",
          "stylers": Array [
            Object {
              "color": "#ae9e90",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "landscape.natural",
          "stylers": Array [
            Object {
              "color": "#dfd2ae",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "poi",
          "stylers": Array [
            Object {
              "color": "#dfd2ae",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "poi",
          "stylers": Array [
            Object {
              "color": "#93817c",
            },
          ],
        },
        Object {
          "elementType": "geometry.fill",
          "featureType": "poi.park",
          "stylers": Array [
            Object {
              "color": "#a5b076",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "poi.park",
          "stylers": Array [
            Object {
              "color": "#447530",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "road",
          "stylers": Array [
            Object {
              "color": "#f5f1e6",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "road.arterial",
          "stylers": Array [
            Object {
              "color": "#fdfcf8",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "road.highway",
          "stylers": Array [
            Object {
              "color": "#f8c967",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "road.highway",
          "stylers": Array [
            Object {
              "color": "#e9bc62",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "road.highway.controlled_access",
          "stylers": Array [
            Object {
              "color": "#e98d58",
            },
          ],
        },
        Object {
          "elementType": "geometry.stroke",
          "featureType": "road.highway.controlled_access",
          "stylers": Array [
            Object {
              "color": "#db8555",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "road.local",
          "stylers": Array [
            Object {
              "color": "#806b63",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "transit.line",
          "stylers": Array [
            Object {
              "color": "#dfd2ae",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "transit.line",
          "stylers": Array [
            Object {
              "color": "#8f7d77",
            },
          ],
        },
        Object {
          "elementType": "labels.text.stroke",
          "featureType": "transit.line",
          "stylers": Array [
            Object {
              "color": "#ebe3cd",
            },
          ],
        },
        Object {
          "elementType": "geometry",
          "featureType": "transit.station",
          "stylers": Array [
            Object {
              "color": "#dfd2ae",
            },
          ],
        },
        Object {
          "elementType": "geometry.fill",
          "featureType": "water",
          "stylers": Array [
            Object {
              "color": "#b9d3c2",
            },
          ],
        },
        Object {
          "elementType": "labels.text.fill",
          "featureType": "water",
          "stylers": Array [
            Object {
              "color": "#92998d",
            },
          ],
        },
      ],
      "zoom": 13,
    }
  }
/>
`;
